<resources>
    <string name="app_name">Makank</string>
    <string name="add_member">اضافة للمجموعة</string>
    <string name="send">ارسال</string>
    <string name="Open">Navbar</string>
    <string name="Close">Navbar</string>
    <string name="scan">بــــحث</string>
    <string name="save">حفــظ</string>
    <string name="value_required">value_required</string>
    <string name="share_using">share</string>
    <string name="cancel">إلغـــاء</string>
    <string name="next">التالي</string>
    <string name="receive">إستقبــال</string>
    <string name="home_txt">الرئسية</string>
    <string name="news_txt">الاخبار</string>
    <string name="contact_txt">التواصل</string>
    <string name="statistic_txt">الاحصائيات</string>
    <string name="profile_txt">الحسـاب</string>
    <string name="next_step">الخطوة التالية</string>
    <string name="back">رجـوع</string>
    <string name="ok">موافـق</string>
    <string name="ins">الإرشــادات</string>
    <string name="try_again">أعد المحاولة</string>
    <string name="searchState">إبحث عن ولايتك</string>
    <string name="searchCity">إبحث عن مدينتك</string>
    <string name="SearchLocal">إبحث عن منطقتك</string>
    <string name="phoneNumber">249118135130+‬</string>
    <string name="url_email">info@primarykeysd.com</string>
    <string name="url_site">www.primarykeysd.com‬</string>
    <string name="version_number">الإصدارة 1.1</string>

    <string name="kh">ولاية الخرطوم</string>
    <string name="allVellige">كافة الولايات</string>
    <string name="number_contact">أرقام التواصل</string>
    <string name="place_enter_id">يرجى إدخال رقم التعريف</string>
    <string name="error">خــطأ</string>
    <string name="input_error">إدخال خاطئ</string>
    <string name="no_result">لا توجد نتيجة</string>
    <string name="healthy_case">سليم</string>
    <string name="suspicious_case">مخالط</string>
    <string name="sufferer_case">مصاب</string>
    <string name="success_contact">تم التواصل بنجاح</string>
    <string name="this_number_not_found">هذا الرقم لايــوجد</string>
    <string name="error_network">فشل الإتصال</string>
    <string name="error_network_message">تأكد من وجود الإتصال بالإنترنت</string>
    <string name="requested_done">تم ارسال الطلب</string>
    <string name="cannot_add_this_person">لايمكن اضافة هذا الشخص</string>
    <string name="fill_field">يجب ملئ جميع الحقول</string>
    <string name="the_id_is">الرقم التعريفي :</string>
    <string name="disc_case">اوصف الحالة</string>\
    <string name="disc_area">وصف المنطقة</string>
    <string name="success_notification">نجاح العملية</string>
    <string name="success_approve_notification">تم تقديم البلاغ بنجاح</string>
    <string name="must_done_condition">يجب الموافقة على الشروط</string>
    <string name="must_select_pdf">اختر ملف pdf</string>
    <string name="press_to_send">اضغط على أوافق للإرسال</string>
    <string name="please_add_file">الرجاء إرفاق الملف</string>
    <string name="done_send_cv">تم إرسال السيرة الذاتية</string>
    <string name="length_file_long">اسم الملف طويل للغاية</string>
    <string name="number_persons_seen">الأشخاص الذين تم التواصل معهم :</string>
    <string name="soon">قريبــاً</string>
    <string name="contact_screen">التواصـل مع شخص</string>
    <string name="notification_screen">التبليغ عن حالة</string>
    <string name="testing_screen">الاختبار المعرفي</string>
    <string name="effected_screen">اماكن الاصابات</string>
    <string name="volunteer_screen">التطوع</string>
    <string name="tips_screen">النصائح</string>
    <string name="person_account">الحساب الشخصي</string>
    <string name="group">المجموعة</string>
    <string name="hospital">المستشفيات</string>
    <string name="emergancy">طوارئ</string>
    <string name="quarantin">عزل</string>

    <string name="requests">الطلبات</string>
    <string name="step_1_11">الخطوة 1 من 11</string>
    <string name="step">الخطوة </string>
    <string name="step_11"> من 11</string>
    <string name="must_question_all">يجب عليك الإجابة على جميع الأسئلة</string>
    <string name="result_check">نتيجة الفحص</string>
    <string name="do_not_worry">انت بصحة جيدة اطمئن ولاتقلق</string>
    <string name="catch_cold">انت تعاني من نزلة برد</string>
    <string name="effected">يجب عليك الإتصال بوحدة الوبائيات</string>
    <string name="search_qr">اضغط على الصورة للبحث عن طريق الرمز التعريفي (QrCode)</string>
    <string name="or_input_id">او ادخل الرقم التعريفي</string>
    <string name="hint_id">الرقم التعريفي: xxxxx</string>
    <string name="info_notification">معلومـــات التبليغ</string>
    <string name="area">المنطقة</string>
    <string name="send_location">او ارسل موقعك الحالى</string>
    <string name="disease">الأمراض المزمنة</string>
    <string name="press_disease">قم بالضغط على المرض المصاحب أو المصاحبة</string>
    <string name="common_questions">الأسئلة الشائعة حول جائحة كورونا</string>
    <string name="detail_news">تفاصــــيل الخـــبر</string>
    <string name="your_qr">الـ Qr Code الخاص بك</string>
    <string name="input_person_data">أدخل بياناتك الشخصية</string>
    <string name="first_name">الاسم الاول</string>
    <string name="md_name">الاسم الثاني</string>
    <string name="last_name">الاسم الثالث</string>
    <string name="age">العمر</string>
    <string name="blood">فصيلة الدم</string>

    <string name="male">ذكر</string>
    <string name="female">انثى</string>
    <string name="phone">رقم الهاتف</string>
    <string name="gender">الجنس</string>
    <string name="check_corona">فحص فيروس كورونا</string>
    <string name="info_desc">تأكد مما إذا كان لديك أعراض لفيروس كورونا أو مجرد نزلة برد</string>
    <string name="almost_done">لقد قاربنا على الانتهاء</string>
    <string name="cond_volunteer">شــروط التطوع</string>
    <string name="covid">المبادرة الوطنية لمكافحة فيروس كورونا كوفيد 19 في دولة السودان</string>
    <string name="upload_pdf">رفع السيرة الذاتية (بصيغة pdf)</string>
    <string name="approve_cond">اوافق على الشروط والاحكام</string>
    <string name="accept">اوافق</string>
    <string name="not_found_member">لايوجد اعضاء</string>
    <string name="no_news">لاتوجد اخبار</string>
    <string name="no_requests">لاتوجد طلبات</string>
    <string name="new_case">الولاية</string>
    <string name="case_recover">حالات الشفاء الجديدة</string>
    <string name="new_death">الوفيات الجديدة</string>
    <string name="suspicious_num">الحالات المشتبهة</string>
    <string name="total_recover">إجمالي حالات الشفاء</string>
    <string name="total_death">إجمالي الوفيات</string>
    <string name="total_effected_num">عدد الإصابات الكلي</string>
    <string name="id_own">الرقم التعريفي الخاص به :</string>
    <string name="request_for_him">طلب للإنضمام لمجموعته</string>
    <string name="accepted">قبول</string>
    <string name="rejected">رفض</string>
    <string name="share_app">مشاركة التطبيق</string>
    <string name="qr_code">رمز QR Code</string>
    <string name="instruction">الإرشادات</string>
    <string name="phone_edemi">التواصل مع الوبائيات</string>
    <string name="facebook">فيسبوك</string>
    <string name="terms">الشروط والاحكام</string>
    <string name="about_app">عن التطبيق</string>
    <string name="please_wait">الرجاء الإنتظار...</string>
    <string name="before">قبل</string>
    <string name="minute">دقيقة</string>
    <string name="second">ثانية</string>
    <string name="hour">ساعة</string>
    <string name="days">أيام</string>
    <string name="before_month">قبل شهر</string>
    <string name="before2month">قبل شهرين</string>
    <string name="before3month">قبل 3 أشهر</string>
    <string name="before4month">قبل 4 أشهر</string>
    <string name="before5month">قبل 5 أشهر</string>
    <string name="before6month">قبل 6 أشهر</string>
    <string name="before7month">قبل 7 أشهر</string>
    <string name="before8month">قبل 9 أشهر</string>
    <string name="before9month">قبل 9 أشهر</string>
    <string name="before10month">قبل 10 أشهر</string>
    <string name="before11month">قبل 11 أشهر</string>
    <string name="before_year">قبل سنة</string>
    <string name="wait_code">الرجاء الإنتظار جاري إرسال رمز التحقق</string>
    <string name="error_code">رمز التحقق الذي تم ادخاله غير صحيح</string>
    <string name="phone_verify">الرجاء إدخال رقم الهاتف للتحقق</string>
    <string name="input_verify">الرجاءإدخال رمز التفعيل سيصلك برسالة نصية على رقمك </string>
    <string name="error_phone_number">رقم الهاتف غير صحيح</string>
    <string name="chooseState">إختر الولاية</string>
    <string name="chooseCity">إختر المدينة</string>
    <string name="chooseLocal">إختر المنطقة</string>
    <string name="messageLocal">يرجى إختيار المنطقة</string>

    <string name="register">تسجيل دخول</string>
    <string name="registerMessage">يجب عليك تسجيل الدخول لمعرفة الميزات الأخرى</string>
    <string name="test_string"> "برايمري كي \u00a9 جميع حقوق الطبع محفوظة 2020"</string>
    <string name="choosePlace"> إختر منطقة سكنك الحالي"</string>
    <string name="hospital_info">المستشفيات المتاحة</string>
    <string name="hospital_azl">للعزل فقط</string>
    <string name="hospital_emer">للطوارىء فقط</string>
    <string name="azl">عزل</string>
    <string name="emer">طوارىء</string>
    <string name="verify">التحقق من الهاتف</string>
    <string name="info_hospital">معلومات المشفى</string>
    <string name="more">المزيد</string>
    <string name="email">الإيميل</string>
    <string name="site">الموقع الإلكتروني</string>
    <string name="version">الإصدارة</string>
    <string name="name_app">مكانك</string>
    <string name="detailsHospital">لاتوجد تفاصيل</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
