<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/share_nav"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share_app"></item>
    <item
        android:id="@+id/qr_code"
        android:icon="@drawable/ic_qr_code"
        android:title="@string/qr_code"></item>
    <item
        android:id="@+id/inst"
        android:icon="@drawable/ic_virus"
        android:title="@string/instruction"></item>

    <item
        android:id="@+id/waba"
        android:icon="@drawable/ic_call_black_24dp"
        android:title="@string/phone_edemi"></item>
    <item
        android:id="@+id/face_book"
        android:icon="@drawable/facebook"
        android:title="@string/facebook"></item>
    <item
        android:id="@+id/rol_nav"
        android:icon="@drawable/ic_insert_comment_black_24dp"
        android:title="@string/terms"></item>
    <item
        android:id="@+id/about_nav"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/about_app"></item>
</menu>