<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.activity.HospitalsActivity">
    <include layout="@layout/custom_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/total2"
        android:gravity="center">

        <TextView
            android:id="@+id/infoInsert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/hospital_info"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#B9A636"
        android:layout_height="3dp">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/isolation_btn"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/azl"
            android:background="@drawable/custom_button"/>
        <Button
            android:id="@+id/emergency_btn"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:text="@string/emer"
            android:background="@drawable/custom_button"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_hospital"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>
    <TextView
        android:id="@+id/not_fond"
        android:layout_gravity="center"
        android:text="@string/no_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
</LinearLayout>