<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="inherit"
    android:background="@drawable/card_button"
    tools:context=".ui.activity.RegisterActivity">
    <include layout="@layout/custom_toolbar"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layoutDirection="inherit"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/total2"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:id="@+id/infoInsert"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:text="@string/input_person_data" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="#B9A636"
            android:layout_height="3dp">
        </LinearLayout>
        <!--    <FrameLayout-->
        <!--        android:id="@+id/frame1"-->
        <!--        android:layout_width="348dp"-->
        <!--        android:layout_gravity="center"-->
        <!--        android:layout_height="264dp"-->
        <!--        tools:ignore="MissingConstraints">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/f_name"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textAlignment="textStart"
                android:textColor="#4D4646"
                android:maxLength="12"
                android:textColorHint="#8B8686" />

            <EditText
                android:id="@+id/s_name"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:maxLength="12"
                android:paddingLeft="20dp"
                android:hint="@string/md_name"
                android:inputType="textPersonName"
                android:paddingRight="20dp"
                android:textAlignment="textStart"
                android:textColor="#4D4646"
                android:textColorHint="#8B8686" />

            <EditText
                android:id="@+id/l_name"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:paddingLeft="20dp"
                android:hint="@string/last_name"
                android:maxLength="12"
                android:inputType="textPersonName"
                android:paddingRight="20dp"
                android:textAlignment="textStart"
                android:textColor="#4D4646"
                android:textColorHint="#8B8686" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/phone"
                android:paddingLeft="20dp"
                android:inputType="number"
                android:paddingRight="20dp"
                android:textAlignment="textStart"
                android:maxLength="9"
                android:textColor="#4D4646"
                android:textColorHint="#8B8686" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="#C4C2C2"
                android:gravity="center|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/type_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gender"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />
                <RadioGroup
                    android:id="@+id/gender_radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/male"
                    android:orientation="horizontal"
                    android:textAlignment="center"
                    android:textColorHint="#4D4646">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:theme="@style/RadioButtonStyle"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />
                    <RadioButton
                        android:id="@+id/female"
                        android:theme="@style/RadioButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/age"
                android:inputType="number"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textAlignment="textStart"
                android:textColor="#4D4646"
                android:maxLength="3"
                android:textColorHint="#8B8686" />
        </LinearLayout>
        <!--    </FrameLayout>-->
        <Button
            android:id="@+id/don_register"
            android:layout_width="186dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/redbtn"
            android:text="@string/next"
            android:textSize="20sp"
            android:textColor="@color/cardview_light_background" />

    </LinearLayout>
</ScrollView>
</LinearLayout>