<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layoutDirection="rtl"
    android:padding="10dp"
    tools:context=".ui.activity.About">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo_makank"
        android:gravity="center" />

    <androidx.cardview.widget.CardView
        android:id="@+id/news_card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/card_button"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:id="@+id/layoutDialog"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:background="@drawable/dialog_background"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/id1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/phoneNumber"
                android:textColor="@color/total2"
                android:textSize="14sp" />
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_phone_forwarded_black_24dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/total1" />

            <LinearLayout
                android:id="@+id/layout_kh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/email"
                    android:textColor="@color/total2"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/id2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/url_site"
                    android:textColor="@color/total2"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/total1" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/site"
                android:textColor="@color/total2"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/id3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/url_email"
                android:textColor="@color/total2"
                android:textSize="14sp" />
        </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/total1" />

            <LinearLayout
                android:id="@+id/layout_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/version_number"
                    android:textColor="@color/total2"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_error_background"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/copyRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/test_string"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>